test class for email to case added

--- a/Demo-Attachment/src/classes/AP01_UploadToSharinPix.cls
+++ b/Demo-Attachment/src/classes/AP01_UploadToSharinPix.cls
@@ -4,20 +4,24 @@ public class AP01_UploadToSharinPix {
     	map<Id, Id> caseIdMap = new map<Id, Id>();
     	for(EmailMessage email: [select id, parentId from EmailMessage where Id in :emailMsgIdSet]){
     		caseIdMap.put(email.id, email.parentId);
-    	}//end for 
+    	}//end for  
 
     	for(Attachment att: attachmentList){
     		upload_photo(att.id, caseIdMap.get(att.parentId));
     	}
-    }
+    } 
 
     @future (callout=true)
-    public static void upload_photo(string attachmentId, string caseId){
-    	string client_id = 'a06d99e4-2772-4bff-a243-749b28fa6e24';
-        string client_secret = 'dfd13c53da6e2768808e2f7b6109e833';
-        Client clientInstance = new Client(client_id, client_secret, Client.API_URL);
-        
-        clientInstance.upload_image_to_album(attachmentId, caseId);
+    public static void upload_photo(string attachmentId, string caseId){ 
+        list<Credential__c> credential = Credential__c.getAll().values();
+        if (!credential.isEmpty()){
+            string client_id = credential[0].Client_Id__c;
+            string client_secret = credential[0].Client_Secret__c;
+            Client clientInstance = new Client(client_id, client_secret, Client.API_URL);
+            clientInstance.upload_image_to_album(attachmentId, caseId);
+        }
+        else {
+            system.debug('### Error occurred');
+        }
     }
-    
 }
