Singleton, Cf. https://developer.salesforce.com/page/Apex_Design_Patterns#Singleton

--- a/sharinpix/src/classes/Client.cls
+++ b/sharinpix/src/classes/Client.cls
@@ -1,4 +1,12 @@
 global class Client {
+    private static Client instance = null;
+
+    global static Client getInstance(){
+        Credential__c cr = Credential__c.getOrgDefaults();
+        if(instance == null) instance = new Client(cr.Client_Id__c, cr.Client_Secret__c, cr.Endpoint_Url__c);
+        return instance;
+    }
+
     global String client_id {get;set;}
     global String client_secret {get;set;}
     global String endpoint_url {get;set;}
@@ -128,10 +136,5 @@ global class Client {
     }
     global string token(Map<String, Object> claims){
         return new Token(this.client_id, this.client_secret, claims).issue();
-    }
-
-    global static Client newInstance(){
-        Credential__c cr = Credential__c.getOrgDefaults();
-        return new Client(cr.Client_Id__c, cr.Client_Secret__c, cr.Endpoint_Url__c);
     }
 }
